Fixed offscreen sign hiding on mobile. SW vehicles now stay in their lane on screen resize

--- a/style.css
+++ b/style.css
@@ -773,7 +773,7 @@ span.divider {
 .waiting-sign {
   border: 2px solid #222;
   border-radius: 10px;
-  position: absolute;
+  position: fixed;
   left: 8px;
   bottom: 11.5%;
   z-index: 99;
